test_src/compiler_errors/types/binary/LeftShiftFloatError4.b
class LeftShiftFloatError4 {
    void test() {
        var value = 14.0;
        println(value <<= 6);
    }
}
